--- a/style.css
+++ b/style.css
@@ -7,3 +7,14 @@
     margin-right: 1%;
     height: 20px;
 }
+
+.searchBtn{
+    width: 200px;
+    margin: 0 auto;
+}
+
+.header{
+    width: 80%;
+    padding: 10px;
+}
+
